2019-02-09, S3QL 3.0

  * Added a new `--systemd` option to simplify running mount.s3ql
    as a systemd unit.

  * Dropped the `--upstart` option - upstart seems to be unused and
    unmaintained.

  * Dropped support for legacy ("API key") authentication for Google
    Storage. Only oauth2 is supported now. This was necessitated by
    the switch to Google's native API (before S3QL was using Google's
    S3 compatibility layer).

  * Command line options specified in the authinfo file (in particular
    --backend-options) are now parsed correctly.

  * S3QL now uses python-cryptography instead of the (no longer
    maintained) pycrypto module.

  * The Google Storage backend now supports Application Default
    Credentials (ADC). To use this, install the google.auth module
    and use ``adc`` as your backend login.

  * `umount.s3ql` now works correctly on systems where `ps` doesn't
    accept a `-p` option (as long as /proc is available).

2018-12-28, S3QL 2.33

  * Fixed a sporadic test failure in t5_cache.py.

2018-11-06, S3QL 2.32

  * Fixed a potential bug in s3qlrm that would probably lead to a
    filesystem crash (hasn't actually been observed though).

  * Clarified installation instructions: S3QL requires the official
    systemd Python module, not the (third-party) module on PyPi.

  * Fixed occasional crashes with a "dugong.StateError" exception.
    Thanks to Roger Gammans for extensive testing!

  * mount.s3ql and fsck.s3ql got a new `--keep-cache` option. If this
    is specified, locally cached data will not be removed on unmount
    (or after fsck) so that it can be re-used if the file system is
    mounted again on the same system without having been mounted
    elsewhere.

  * S3QL now considers all SSL-related errors as temporary and
    automatically retries (instead of bailing out).

2018-10-08, S3QL 2.31

  * Object removal now makes more use of parallelism.

2018-09-02, S3QL 2.30
